Update to platform 2.7.3